--- a/sass/modules/homepage/_homepageUmbrella.scss
+++ b/sass/modules/homepage/_homepageUmbrella.scss
@@ -240,7 +240,7 @@
     h2 {
       background: #ffffff;
       font-size: 1.6rem;
-      margin: 20px 0 10px 10px;
+      margin: 2rem 1rem 1rem;
       padding-top: 0;
       float: left;
       clear: both;
@@ -252,7 +252,7 @@
     }
     .field-name-field-body {
       background: #ffffff;
-      margin: 10px 0 0 10px;
+      margin: 0rem 1rem 1rem;
       padding: 10px;
       color: #222;
       float: left;
